--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "mocha": "^2.3.0",
     "node-sass": "^3.4.2",
     "react-hot-loader": "^1.3.0",
+    "redux": "^3.0.4",
     "redux-devtools": "^2.1.5",
+    "redux-devtools-gentest-plugin": "^1.0.5",
+    "redux-logger": "^2.0.4",
+    "redux-slider-monitor": "^0.6.3",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
@@ -37,12 +41,15 @@
     "classnames": "^2.1.3",
     "immutable": "^3.7.5",
     "object-assign": "^4.0.1",
+    "ramda": "^0.18.0",
     "react": "^0.14.0",
     "react-addons-pure-render-mixin": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-redux": "^3.1.0",
     "react-router": "^1.0.0-rc3",
-    "redux": "^2.0.0",
+    "redux": "^3.0.0",
+    "redux-immutable": "^1.3.10",
+    "redux-thunk": "^1.0.0",
     "socket.io-client": "^1.3.6",
     "uuid": "^2.0.1"
   }
